--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -10,6 +10,12 @@
 {% block title %}Modifier la Tâche perso{% endblock %}
     
     {% block body %}
+    <script src="https://kit.fontawesome.com/a398bc3145.js" crossorigin="anonymous"></script>
+        <span id="close">
+            <a href="/home/objectifs">
+                <i class="fa-solid fa-xmark"></i>
+            </a>
+        </span>
         <div class="container">
             <div class="row">
                 <div class="col-12">
