--- a/public/style/task/edit.css
+++ b/public/style/task/edit.css
@@ -12,6 +12,18 @@ h1 {
     color: #DADEE3;
 }
 
+#close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 2vw 2vw;
+}
+
+i{
+    color: #E86C00;
+    font-size: 2vw;
+}
+
 label, legend{
     font-family: 'Poppins';
     font-style: normal;
